--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@node-rs/argon2": "^1.1.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.33.0",
 		"postgres": "^3.4.4"
 	},
